# github_desktop_rust

./: Cargo.toml
src/: app.rs  git_engine.rs  main.rs
src/app/: message.rs  mod.rs  update.rs  view.rs
src/git_engine/: branch.rs  checkout.rs  commit.rs  diff.rs  history.rs  mod.rs  status.rs
src/models/: branch.rs  commit.rs  mod.rs  operations.rs  repository.rs  status.rs
