[package]
name = "github_desktop_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
git2 = "0.21.0"
iced = "0.14.0"

[profile.dev]
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false